# studious-fishstick

./: README.md  TODO.md  toImplement.md
data/: Working File Phase I (1).xlsx
workspace/: kasba_detailed_analysis.py  main.py  pyproject.toml
workspace/config/: analysis_config.yaml
workspace/src/: __init__.py  explore.ipynb
workspace/src/analysis/: demographic.py  electoral.py
workspace/src/data/: __init__.py  loader.py  validator.py
workspace/src/utils/: config.py  helpers.py  logger.py
